change css from fill to stretch and also fix cypress as per comments

--- a/openmetadata-ui/src/main/resources/ui/src/styles/components/size.less
+++ b/openmetadata-ui/src/main/resources/ui/src/styles/components/size.less
@@ -149,9 +149,6 @@
 .w-fit-content {
   width: fit-content;
 }
-.w-fill-available {
-  width: -webkit-fill-available;
-}
 .w-full {
   width: 100%;
 }
@@ -176,6 +173,9 @@
 }
 .w-max-full-140 {
   max-width: calc(100% - 140px);
+}
+.w-max-stretch {
+  max-width: stretch;
 }
 
 .w-auto {
